--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "react_webtodo_application",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://caiofp27.github.io/react_webtodo_application",
   "dependencies": {
+    "gh-pages": "^2.1.1",
     "moment": "^2.24.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
@@ -13,7 +15,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
