--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://caiofp27.github.io/react_webtodo_application",
   "dependencies": {
+    "axios": "^0.19.0",
     "gh-pages": "^2.1.1",
     "moment": "^2.24.0",
     "react": "^16.10.2",
