--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react_webtodo_application",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://caiofp27.github.io/react_webtodo_application",
   "dependencies": {
     "axios": "^0.19.0",
     "gh-pages": "^2.1.1",
